@@ -239,6 +239,9 @@ Version 4.6.1  [ (under development) ]
               combinatorial isomorphism classes of triangulations.
             - New routines isOriented() and orient() to relabel tetrahedron
               vertices for consistent orientation.  Thanks to Matthias Goerner.
+            - New routines isOrdered() and order() to relabel tetrahedron
+              vertices so that they are ordered consistently across adjacent
+              faces.  Thanks again to Matthias Goerner.
             - Fixed a memory leak in shellBoundary().
         Class NTrieSet:
             - A new class for storing and querying a large number of sets,
